--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">record-nutrients</string>
     <string name="loading_projects">Loading projects …</string>
+    <string name="add_meal_item_label">品名</string>
+    <string name="add_meal_item_amount">食べた量(g)</string>
+    <string name="add_meal_item_calorie">カロリー(kcal)</string>
+    <string name="add_meal_item_memo">メモ</string>
 
     <string-array name="protein_array">
         <item>なし</item>
