--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="loading_projects">Loading projects …</string>
     <string name="add_meal_item_label">品名</string>
     <string name="add_meal_amount_label">食べた量(g)</string>
-    <string name="add_meal_calorie_label">カロリー(kcal)</string>
+    <string name="add_meal_calorie_label">栄養素(g)</string>
     <string name="add_meal_memo_label">メモ</string>
     <string name="add_meal_error_message">品名と量とカロリーは入力必須です。</string>
     <string name="add_meal_finish_message">追加しました。</string>
